# datajob-insight

./: .dockerignore  .gitignore  README.md  docker-compose.yml  setup_pg_scripts.sql
.docs/: how-to-start.md  team-guide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  task_issue.yaml
_common/config/: settings.py
_common/schema/: job_grid.py
api-service/: Dockerfile  pyproject.toml
api-service/app/: main.py
api-service/app/crud/: crud_job_grid.py
api-service/app/db/: session.py
api-service/app/models/: job_grid.py
api-service/app/routers/: job_grid.py
crawler-service/: Dockerfile  README.md  crontab  docker-compose.yml  main.py  pyproject.toml  run_crawlers.sh
crawler-service/config/: site_configs.py
crawler-service/crawler/: base_crawler.py  crawler_factory.py  jobkorea_crawler.py  saramin_crawler.py  wanted_crawler.py
crawler-service/models/: data_models.py
crawler-service/scripts/: run_crawler.py
crawler-service/utils/: database.py  position_normalizer.py  tech_stack_normalizer.py
etl-service/: Dockerfile
etl-service/etl-project/: README.md  docker-compose.yml  etl.py  requirements.txt
etl-service/etl-project/dags/: etl_dag.py
web-dashboard-service/: Dockerfile  README.md  api_client.py  app.py  config.py  db_utils.py  requirements.txt
web-dashboard-service/pages/: company.py  position.py  region.py  tech.py
web-jobposting-service/: Dockerfile  pyproject.toml
web-jobposting-service/app/: main.py
web-jobposting-service/app/core/: config.py
web-jobposting-service/app/routers/: job_grid.py
web-jobposting-service/app/services/: client.py
web-jobposting-service/app/static/js/: job_grid.js
web-jobposting-service/app/templates/: job_grid.html
